Bump aside z-index value to prevent tooltip overlapping

--- a/plugins/lunchbadger-core/src/components/Quadrant/Quadrant.scss
+++ b/plugins/lunchbadger-core/src/components/Quadrant/Quadrant.scss
@@ -6,6 +6,7 @@
   position: relative;
   border-right: 1px solid $ui-base-border;
   flex: 0 0 auto;
+  padding-bottom: 35px;
 
   &:before {
     content: '';
